# mirosociety

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml
backend/: pyproject.toml
backend/app/: config.py  constants.py  main.py  presets.py
backend/app/api/: agents.py  gallery.py  presets.py  simulate.py
backend/app/db/: store.py
backend/app/models/: __init__.py  action.py  agent.py  demographics.py  scenario.py  simulation.py  world.py
backend/app/services/: census.py  citizen_generator.py  engine.py  forecast.py  gossip.py  life_context.py  life_engine.py  llm.py  narrator.py  report_analyzer.py  research.py  resolver.py  sim_logger.py  tension.py  world_generator.py
backend/tests/: conftest.py  test_backstory_gen.py  test_census.py  test_life_context.py  test_life_engine.py  test_life_models.py  test_realism.py
docs/plans/: 2026-03-17-analyst-report-design.md  2026-03-17-analyst-report-implementation.md  2026-03-17-enterprise-strategy.md  2026-03-17-mirosociety-design.md  2026-03-17-mirosociety-implementation.md  2026-03-17-mirror-world-design.md  2026-03-18-agent-research-tools-design.md  2026-03-18-discovery-engine-design.md  2026-03-19-life-domain-system-design.md  2026-03-19-life-domain-system-implementation.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue
frontend/src/api/: client.js
frontend/src/components/: AgentAvatar.vue  AgentDetailPanel.vue  AgentSwarmCanvas.vue  AppShell.vue  BaseModal.vue  ErrorBoundary.vue  ForkModal.vue  (+9 more)
(+10 files in other folders)
